Resolve EVS-2650 "Test improvements"